cluster-aggregator/src/section/snapshots/cluster_aggregator__section__node_kubelet__tests__kube_node_kubelet_v1_response.snap
---
source: cluster-aggregator/src/section/node_kubelet.rs
expression: "KubeNodeKubeletV1::from_node(&node, &healths)"
---
{
  "version": "v1.34.0",
  "health": {
    "status_code": 200,
    "response": "ok"
  }
}
